2009-12-11  Francisco Rivas  <frivas@libresoft.es>

	* setup.py :

		Release 0.4
 
 
2009-12-11  Francisco Rivas  <frivas@libresoft.es>

	* AUTHORS : Updated, added Francisco Rivas
	* ChangeLog : Updated
	* NEWS : Updated
	* autogen.sh : Deleted we do not need it, we use distutils
	* configure.in : Deleted we do not need it, we use distutils
	* Makefile.am : Deleted we do not need it, we use distutils
	* bicho.in : Deleted we do not need it, we use distutils
  * common/ : Deleted we do not need it, we use distutils 
	* common/bicho-autogen.sh : Deleted we do not need it, we use distutils 

		Some files deleted because we are using distutils to install and
		deploy the application. (r-7155) 
 

2009-23-10  Francisco Rivas  <frivas@libresoft.es>

	* bicho/trunk/doc/bicho.1 : Bicho man page

		Added a SYNOPSIS section in man page (r-7150)
 
 
2009-23-10  Francisco Rivas  <frivas@libresoft.es>

	* bicho/trunk/setup.py : Installer

		Needed modification to installer script to install the man page (r-7148)
 

2009-23-10  Francisco Rivas  <frivas@libresoft.es>

	* bicho/trunk/doc/bicho.1 : Man page of bicho

		Adding a man page (r-7147)
 

2009-23-10  Francisco Rivas  <frivas@libresoft.es>

	* bicho/trunk/doc/UserManual.txt : User manual of bicho

		Adding a basic user manual (r-7146)
 

2009-02-10  Francisco Rivas  <frivas@libresoft.es>

	* bicho/trunk/bicho : Launcher
	*	bicho/trunk/bin/bicho : Launcher
	* bicho/trunk/setup.py : distutils-based Installer

	 Added installer and needed files (r-7143)

 
2009-02-10  Francisco Rivas  <frivas@libresoft.es>

	* bicho/trunk/Bicho/backends/sf.py: Fixing bugs #133 #134 and show number of bug
	analyzed during the process

	 Bug #133 : The number of bugs reported by the application is wrong 
	 Bug #134 : the amount of bugs analyzed was wrong because it did not
	 handle well the offset bugs, it means, the links of each page of bugs
	 (r-7142)

 
2009-23-09  Francisco Rivas  <frivas@libresoft.es>
