@@ -1,14 +1,0 @@
-SUBDIRS = Bicho
-
-bin_SCRIPTS = bicho
-
-bicho: bicho.in
-	sed -e s!\@pyexecdir\@!@pyexecdir@! < $< > $@
-	chmod a+x $@
-
-EXTRA_DIST = 		\
-	COPYING		\
-	README		\
-	bicho.in
-
-CLEANFILES = bicho
