@@ -1,15 +1,0 @@
-AC_PREREQ(2.57)
-AC_INIT([Bicho],[0.3])
-AM_INIT_AUTOMAKE([1.9 dist-bzip2 no-dist-gzip])
-
-AM_MAINTAINER_MODE
-
-AM_PATH_PYTHON(2.4)
-
-AC_CONFIG_FILES([
-Makefile
-Bicho/Makefile
-Bicho/backends/Makefile
-])
-AC_OUTPUT
-
