@@ -3,8 +3,8 @@
 	* setup.py :
 
 		Release 0.4
- 
- 
+
+
 2009-12-11  Francisco Rivas  <frivas@libresoft.es>
 
 	* AUTHORS : Updated, added Francisco Rivas
@@ -13,7 +13,13 @@
 	* autogen.sh : Deleted we do not need it, we use distutils
 	* configure.in : Deleted we do not need it, we use distutils
 	* Makefile.am : Deleted we do not need it, we use distutils
-	* bicho.in : Deleted we do not need it, we use distutils
+	* bicho.in : Deleted we do not need it, we use distutils 
+		
+		Some files deleted because we are using distutils to install and
+		deploy the application. (r-7156) 
+ 
+2009-12-11  Francisco Rivas  <frivas@libresoft.es>
+
   * common/ : Deleted we do not need it, we use distutils 
 	* common/bicho-autogen.sh : Deleted we do not need it, we use distutils 
 
